--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 
                         <ul class="list-inline companies">
                             <li>
-                                <a href="http://www.maek.co.uk/emerging-circle/" class="btn btn-default btn-lg"><i><img src="img/ecLogo.png" /></i> Emerging Circle</a>
+                                <a href="http://www.rotationtheapp.com/" class="btn btn-default btn-lg"><i><img src="img/thecc.png" /></i> The Coding Circle</a>
+                            </li>
+                            <li>
+                                <a href="http://www.rotationtheapp.com/" class="btn btn-default btn-lg"><i><img src="img/rotation.png" /></i> Rotation</a>
                             </li>
                             <li>
                                 <a href="http://www.gameplaysport.com" class="btn btn-default btn-lg"><i><img src="img/gps.png" /></i> GamePlaySport</a>
