--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                         <ul class="list-inline companies">
                             <li>
-                                <a href="http://www.rotationtheapp.com/" class="btn btn-default btn-lg"><i><img src="img/thecc.png" /></i> The Coding Circle</a>
+                                <a href="http://www.rotationtheapp.com/" class="btn btn-default btn-lg"><i><img src="img/theCC.png" /></i> The Coding Circle</a>
                             </li>
                             <li>
                                 <a href="http://www.rotationtheapp.com/" class="btn btn-default btn-lg"><i><img src="img/rotation.png" /></i> Rotation</a>
