--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                         <ul class="list-inline companies">
                             <li>
-                                <a href="http://www.rotationtheapp.com/" class="btn btn-default btn-lg"><i><img src="img/theCC.png" /></i> The Coding Circle</a>
+                                <a href="http://www.thecodingcircle.com/" class="btn btn-default btn-lg"><i><img src="img/theCC.png" /></i> The Coding Circle</a>
                             </li>
                             <li>
                                 <a href="http://www.maek.co.uk/emerging-circle/" class="btn btn-default btn-lg"><i><img src="img/ecLogo.png" /></i> Emerging Circle</a>
