--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <title>A Peach</title>
 
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.png" sizes="32x32" type="img/favicon.png">
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
