fixed broken favicon link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>A Peach</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.png" sizes="32x32" type="img/favicon.png">
+    <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
